# neurixai-data-platform

./: .gitignore  README.md
docs/: architecture.md
infra/: .env.example  docker-compose.yml
infra/apisix/: config.yaml  route-environment-data.yaml  route-market-data.yaml  route-reference-data.yaml
scripts/: apisix_setup.sh  seed.py
services/core-api/: Containerfile  pyproject.toml
services/core-api/app/: main.py
services/core-api/app/core/: apisix_client.py  auth.py  cache.py  db.py  mailer.py  mfa.py
services/core-api/app/domains/environment_data/: repository.py  router.py  schemas.py
services/core-api/app/domains/market_data/: repository.py  router.py  schemas.py
services/core-api/app/domains/platform/: repository.py  router.py  schemas.py
services/core-api/app/domains/reference_data/: repository.py  router.py  schemas.py
services/ingestion/: Containerfile  pyproject.toml  worker.py
services/ingestion/certs/: letsencrypt_gen_y_root_yr.pem
services/ingestion/connectors/: base.py  exchange_rate.py  pm25.py  province_district_subdistrict.py  public_holidays.py  weather.py
services/portal/: Containerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
services/portal/src/app/: globals.css  layout.tsx  page.tsx
services/portal/src/app/check-email/: page.tsx
services/portal/src/app/dashboard/: CreateKeyForm.tsx  MfaSection.tsx  actions.ts  page.tsx
services/portal/src/app/login/: LoginForm.tsx  actions.ts  page.tsx
services/portal/src/app/signup/: SignupForm.tsx  actions.ts  page.tsx
services/portal/src/app/verify-email/: page.tsx
services/portal/src/components/: ThemeToggle.tsx
services/portal/src/lib/: auth.ts  coreApi.ts
services/portal/src/types/: next-auth.d.ts
services/shared/: pyproject.toml
services/shared/alembic/: env.py
services/shared/alembic/versions/: 15d5df44d22f_pm25_readings.py  2629e629c721_milestone_0_schema.py  27ca9594dbaa_exchange_rates.py  8efd356df197_public_holidays.py  9c6b1f3a7d21_user_mfa_email_verification.py  f8a588bf0e12_weather_forecasts.py
services/shared/neurix_shared/: config.py  db.py
services/shared/neurix_shared/models/: __init__.py  environment_data.py  market_data.py  platform.py  reference_data.py
