[project]
name = "neurix-core-api"
version = "0.1.0"
description = "NeurixAI Data Platform — Core Data Service (FastAPI, domain-separated modules)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "redis>=5.0",
    "httpx>=0.27",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.1",
    "neurix-shared",
]

[tool.uv.sources]
neurix-shared = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
