[project]
name = "neurix-ingestion"
version = "0.1.0"
description = "NeurixAI Data Platform — Ingestion workers (Connector framework + scheduler)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "apscheduler>=3.10",
    "tenacity>=8.5",
    "neurix-shared",
]

[tool.uv.sources]
neurix-shared = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["connectors"]
