[project]
name = "neurix-shared"
version = "0.1.0"
description = "Shared DB models and session utilities for NeurixAI Data Platform (source of truth for schema, used by core-api and ingestion)"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29",
    "pydantic-settings>=2.4",
    "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neurix_shared"]
